add, delete, show simulations in frontend from backend database

--- a/frontend/src/app/simulation-element/simulation-element.component.html
+++ b/frontend/src/app/simulation-element/simulation-element.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="simulation">    
+<!-- <div *ngIf="simulation">    
     <th scope="row">{{simulation.name}}</th>
-    <td>{{simulation.popSize}}</td>
-    <td>{{simulation.sickNumber}}</td>
-    <td>{{simulation.R}}</td>
+    <td>{{simulation.populationSize}}</td>
+    <td>{{simulation.infected}}</td>
+    <td>{{simulation.infectionRate}}</td>
     <td>{{simulation.mortalityRate}}</td>
     <td>{{simulation.dayUntilRecovery}}</td>
     <td>{{simulation.dayUntilDead}}</td>
-    <td>{{simulation.simulationDays}}</td> 
-</div>
+    <td>{{simulation.dayNumber}}</td> 
+</div> -->
