--- a/frontend/src/app/simulation-element/simulation-element.component.html
+++ b/frontend/src/app/simulation-element/simulation-element.component.html
@@ -4,7 +4,7 @@
     <td>{{simulation.infected}}</td>
     <td>{{simulation.infectionRate}}</td>
     <td>{{simulation.mortalityRate}}</td>
-    <td>{{simulation.dayUntilRecovery}}</td>
-    <td>{{simulation.dayUntilDead}}</td>
+    <td>{{simulation.daysUntilRecovery}}</td>
+    <td>{{simulation.daysUntilDead}}</td>
     <td>{{simulation.dayNumber}}</td> 
 </div> -->
