--- a/frontend/src/app/population-details/population-details.component.html
+++ b/frontend/src/app/population-details/population-details.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12 text-center">
-        Dzień {{population.day}}
+        Dzień {{day}}
     </div>
 </div>
 <div class="row">
@@ -14,7 +14,7 @@
     <div class="col-6">
         <app-detail-label label="Osoby zdrowe"
                           [faIcon]="faIcons[1]"
-                          [number]="population.health">
+                          [number]="population.healthy">
         </app-detail-label>
     </div>
 </div>
@@ -34,16 +34,14 @@
         </app-detail-label>
     </div>
 </div>
-<div class="row text-center">
-    <div class="col-12">
-        ------------------------------------------------------------
-    </div>
+<div class="col-12 text-center">
+    <mat-slider min="0" max="" step="1" value="0"></mat-slider>
 </div>
 <div class="row text-center">
     <div class="col-3 offset-3">
         <div class="row">
             <div class="col-12">
-                <button class="bg-danger btn-lg rounded-pill">
+                <button (click)="dayLess()" class="bg-danger btn-lg rounded-pill">
                     <fa-icon [icon]="faIcons[4]">
                     </fa-icon>
                 </button>
@@ -58,7 +56,7 @@
     <div class="col-3">
         <div class="row">
             <div class="col-12">
-                <button class="bg-success btn-lg rounded-pill">
+                <button (click)="dayMore()" class="bg-success btn-lg rounded-pill">
                     <fa-icon [icon]="faIcons[5]">
                     </fa-icon>
                 </button>
