--- a/frontend/src/app/chart/chart.component.html
+++ b/frontend/src/app/chart/chart.component.html
@@ -1,23 +1,6 @@
-<div class="mt-4 pb-4 mb-2 border-bottom row text-center">
-    <div class="col-6">
-        <select class="form-select form-select-lg" aria-label="Default select example">
-            <option selected>Dane na osi X</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-        </select>
-    </div>
-    <div class="col-6">
-        <select class="form-select" aria-label="Default select example">
-            <option selected>Dane na osi X</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-        </select>
-    </div>
-</div>
 
-<div style="display: block">
+
+<div style="display: block" class="mt-4">
     <canvas baseChart
         [datasets]="chartData"
         [labels]="chartLabels"
